--- a/index.html
+++ b/index.html
@@ -12,20 +12,30 @@
     <div class="urna">
         <div class="tela">
             <div class="informacoes">
-                <div class="canditado-foto">
+                <div class="candidato-inform">
+                    <div class="voto-para">SEU VOTO PARA:</div>
+                    <div class="etapas">VEREADOR</div>
+                    <div class="caixas">
+                        <div class="vereador">
+                            <div class="caixa"></div>
+                            <div class="caixa"></div>
+                            <div class="caixa"></div>
+                            <div class="caixa"></div>
+                            <div class="caixa"></div>
+                        </div>
+                        <div class="prefeito">
+                            <div class="caixa"></div>
+                            <div class="caixa"></div>
+                        </div>
+                    </div>
+                    <div class="votoBranco">EM BRANCO</div>
+                    <div class="nome"></div>
+                    <div class="partido"></div>
+                </div>
+                <div class="candidato-foto">
                     <img src="">
                 </div>
-                <div class="canditado-inform">
-                    <div class="voto-para">AAA</div>
-                    <div class="etapas">AAA</div>
-                    <div class="caixas">
-                        <div class="caixa">AAA</div>
-                    </div>
-                    <div class="nome">AAA</div>
-                    <div class="partido">AAA</div>
-                </div>
             </div>
-
             <div class="orientacoes">
                 <div class="mostrar-inform">
                     <p>Aperte a tela:</p>
@@ -35,23 +45,26 @@
             </div>
         </div>
         <div class="teclado">
-            <div class="botao">1</div>
-            <div class="botao">2</div>
-            <div class="botao">3</div>
-            <div class="botao">4</div>
-            <div class="botao">5</div>
-            <div class="botao">6</div>
-            <div class="botao">7</div>
-            <div class="botao">8</div>
-            <div class="botao">9</div>
-            <div class="botao botao-zero">0</div>
+            <div data-key="1" class="botao">1</div>
+            <div data-key="2" class="botao">2</div>
+            <div data-key="3" class="botao">3</div>
+            <div data-key="4" class="botao">4</div>
+            <div data-key="5" class="botao">5</div>
+            <div data-key="6" class="botao">6</div>
+            <div data-key="7" class="botao">7</div>
+            <div data-key="8" class="botao">8</div>
+            <div data-key="9" class="botao">9</div>
+            <div data-key="0" class="botao botao-zero">0</div>
             <div class="funcoes">
                 <div class="botao-operador branco">BRANCO</div>
                 <div class="botao-operador corrige">CORRIGE</div>
-                <div class="botao-operador confirma">CONFIRMA</div>
+                <div class="botao-operador confirmar">CONFIRMAR</div>
             </div>
         </div>
     </div>
+
+    <script src="informs/json.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
