Implementação da validação dos votos

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <p>CORRIGE para RENICIAR este voto</p>
                 </div>
             </div>
+            <div class="fim">FIM</div>
         </div>
         <div class="teclado">
             <div data-key="1" class="botao">1</div>
